--- a/modInfo.yml
+++ b/modInfo.yml
@@ -1,5 +1,5 @@
 # The screen name for the mod
-prettyname: "Equivalent Exchange 3"
+pretty_name: "Equivalent Exchange 3"
 
 # Prettyname to lower without spaces or symbols
 name: "ee3"
